# django-tipping

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
diagrams/: Untitled Diagram.drawio  diagrams.txt
tipping/tipping/: settings.py  urls.py
