[tool.poetry]
name = "tipping"
version = "0.1.0"
description = "A Django app for sports tipping."
authors = ["Blake McIvor bmcivor56@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
